WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156122
Don't crash when rendering form controls with Display List Drawing enabled
https://bugs.webkit.org/show_bug.cgi?id=156122
Summary
Don't crash when rendering form controls with Display List Drawing enabled
Simon Fraser (smfr)
Reported
2016-04-01 17:42:14 PDT
Don't crash when rendering form controls with Display List Drawing enabled
Attachments
Patch
(1.56 KB, patch)
2016-04-01 17:43 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-04-01 17:43:21 PDT
Created
attachment 275450
[details]
Patch
WebKit Commit Bot
Comment 2
2016-04-04 20:56:51 PDT
Comment on
attachment 275450
[details]
Patch Clearing flags on attachment: 275450 Committed
r199037
: <
http://trac.webkit.org/changeset/199037
>
WebKit Commit Bot
Comment 3
2016-04-04 20:56:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug