Don't crash when rendering form controls with Display List Drawing enabled https://bugs.webkit.org/show_bug.cgi?id=156122

Reviewed by Sam Weinig.

Don't attempt to paint form controls if display-list drawing is enabled, since
doing so attempts to get at a CGContextRef that doens't exist.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):


Canonical link: https://commits.webkit.org/174316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199037 268f45cc-cd09-0410-ab3c-d52691b4dbfc